add section portfolio

--- a/creatives/index.html
+++ b/creatives/index.html
@@ -14,12 +14,12 @@
 			<div class="menu-wrap">
 
 				<div class="menu-logo">
-					<a href="#header"><img src="assets/img/logo.png" alt="Логотип" class="logo__img"></a>
+					<a href="/"><img src="assets/img/logo.png" alt="Логотип" class="logo__img"></a>
 				</div>
 
 				<div class="menu-block">
 					<nav class="menu-block-nav">
-						<a href="#header">Home</a>
+						<a href="/">Home</a>
 						<a href="#about">About</a>
 						<a href="#news">News</a>
 						<a href="#blog">Blog</a>
