--- a/index.html
+++ b/index.html
@@ -23,26 +23,51 @@
 				<div class="menu-block">
 					<nav class="menu-block-nav cl-effect-21">
 <!-- 						<a href="#header">Главная</a>
-<a href="#">Портфолио</a> -->
-					</nav>
+	<a href="#">Портфолио</a> -->
+</nav>
 
-					<a href="#" class="menu-btn">
-						<span></span>
-					</a>
+<a href="#" class="menu-btn">
+	<span></span>
+</a>
 
-				</div>
+</div>
 
-				<div class="menu-socials">
-					<a href="https://github.com/sonoria" alt="Профиль на GitHub" title="Профиль на GitHub"><i class="fab fa-github"></i></a>
-					<a href="https://hh.ru/" alt="Резюме на HeadHunter" title="Резюме на HeadHunter"><i class="fab fa-wpforms"></i></a>
-					<a href="https://telegram.org" alt="Телеграм" title="Связаться в Телеграме"><i class="fab fa-telegram"></i></a>
-					<a href="https://vk.com" alt="Профиль ВКонтакте" title="Профиль ВКонтакте"><i class="fab fa-vk"></i></a>
-				</div>
+<div class="menu-socials">
+	<a href="https://github.com/sonoria" alt="Профиль на GitHub" title="Профиль на GitHub"><i class="fab fa-github"></i></a>
+	<a href="https://hh.ru/" alt="Резюме на HeadHunter" title="Резюме на HeadHunter"><i class="fab fa-wpforms"></i></a>
+	<a href="https://telegram.org" alt="Телеграм" title="Связаться в Телеграме"><i class="fab fa-telegram"></i></a>
+	<a href="https://vk.com" alt="Профиль ВКонтакте" title="Профиль ВКонтакте"><i class="fab fa-vk"></i></a>
+</div>
 
+</div>
+</nav>
+
+</header>
+
+<section class="portfolio">
+
+	<h2>Портфолио</h2>
+
+	<div class="portfolio-wrap">
+
+		<div class="creatives">
+			<div class="work-block">
+				<a href="https://sonoria.github.io/creatives/">
+					<div class="work">
+						<img src="assets/img/creatives.jpg" alt="">
+						<div class="color">
+							<i class="fas fa-search"></i>
+						</div>
+						<a href="https://github.com/sonoria/creatives" target="_blank" class="work-open">
+							<i class="fab fa-github"></i>
+						</a>
+					</div>
+				</a>
 			</div>
-		</nav>
+		</div>
 
-	</header>
+	</div>
+</section>
 
 
 
