--- a/creatives/index.html
+++ b/creatives/index.html
@@ -24,7 +24,7 @@
 						<a href="#news">News</a>
 						<a href="#blog">Blog</a>
 						<a href="#feature">Feature</a>
-						<a href="#tean">Team</a>
+						<a href="#team">Team</a>
 						<a href="#contact">Contact</a>
 
 					</nav>
@@ -226,12 +226,157 @@
 	</section>
 
 	<section class="feature" id="feature">
+
+		<div class="left-block">
+			<div class="news-block white-text">
+				<div class="news__caption">
+					<h2>Akita Inu Dog</h2>
+				</div>
+				<div class="news__text">
+					Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+
+					Donec ullamcorper nulla non metus auctor fringilla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere consectetur 
+				</div>
+				<div class="item item-1">
+					<p class="item__text">Fully Responsive Design</p>
+				</div>
+				<div class="item item-2">
+					<p class="item__text">High Quality Code</p>
+				</div>
+				<div class="item item-3">
+					<p class="item__text">Different Headers & Layout</p>
+				</div>
+			</div>
+
+
+		</div>
+
+		<div class="right-block">
+			<img src="assets/img/phone.png" alt="Телефон">
+		</div>
 		
 	</section>
 
 
+	<section class="team" id="team">
+
+		<div class="caption ">
+			<p class="caption__front-text">
+				Our team
+			</p>
+			<p class="caption__back-text back-text_black">
+				T
+			</p>
+			<p class="subtitle">
+				sales long tail influencer pitch release niche market.
+			</p>
+		</div>
+
+		<div class="wrap-cards">
+			<div class="cards">
+				<div class="card-item">
+					<div class="team__img">
+						<img src="assets/img/team.jpg" alt="" class="">
+					</div>
+					<div class="team-info">
+						<div class="team-name text_blue">
+							JOHN SNOW
+						</div>
+						<div class="team-prof">
+							CEO
+						</div>
+					</div>
+				</div>
+
+				<div class="card-item">
+					<div class="team__img">
+						<img src="assets/img/team.jpg" alt="" class="">
+					</div>
+					<div class="team-info">
+						<div class="team-name text_blue">
+							JOHN SNOW
+						</div>
+						<div class="team-prof">
+							CEO
+						</div>
+					</div>
+				</div>
+
+				<div class="card-item">
+					<div class="team__img">
+						<img src="assets/img/team.jpg" alt="" class="">
+					</div>
+					<div class="team-info">
+						<div class="team-name text_blue">
+							JOHN SNOW
+						</div>
+						<div class="team-prof">
+							CEO
+						</div>
+					</div>
+				</div>
+
+				<div class="card-item">
+					<div class="team__img">
+						<img src="assets/img/team.jpg" alt="" class="">
+					</div>
+					<div class="team-info">
+						<div class="team-name text_blue">
+							JOHN SNOW
+						</div>
+						<div class="team-prof">
+							CEO
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</section>
 
 
-	<script src="assets/js/main.js"></script>
+	<section class="contact" id="contact">
+		
+		<div class="caption ">
+			<p class="caption__front-text white-text">
+				We'd love hear about your project.
+			</p>
+			<p class="caption__back-text back-text_white">
+				C
+			</p>
+		</div>
+
+		<form action="POST" class="contact-form">
+
+			<input type="text" class="name" placeholder="Name">
+			<input type="email" class="mail" placeholder="Email">
+			<input type="tel" class="phone" placeholder="Phone">
+
+			<textarea name="" id="" class="message" placeholder="Message"></textarea>
+
+			<input type="button" value="SUBMIT" class="button">
+		</form>
+
+		<div class="map" id="map" style="position: relative; overflow: hidden;">
+			<iframe src="https://yandex.ru/map-widget/v1/-/CBu0eLDSgB" width="1920" height="350" frameborder="0" allowfullscreen="none">
+				
+			</iframe>
+		</div>
+
+	</section>
+
+	<footer class="footer white-text">
+		<div class="copyright">
+			&copy; А. И. Ченцов, 2018
+		</div>
+	</footer>
+
+
+<!-- 	<script
+src="https://code.jquery.com/jquery-3.3.1.min.js"
+integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+crossorigin="anonymous"></script> -->
+
+<script src="assets/js/main.js"></script>
 </body>
 </html>
