--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Ченцов Антон | Сайт-портфолио</title>
 
-
+	<link href="https://fonts.googleapis.com/css?family=Marmelad" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css">
