--- a/index.html
+++ b/index.html
@@ -4,42 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Ченцов Антон | Сайт-портфолио</title>
 
-	<link href="https://fonts.googleapis.com/css?family=Marmelad" rel="stylesheet">
+
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 
-	<!-- Yandex.Metrika counter -->
-	<script type="text/javascript" >
-		(function (d, w, c) {
-			(w[c] = w[c] || []).push(function() {
-				try {
-					w.yaCounter49816147 = new Ya.Metrika2({
-						id:49816147,
-						clickmap:true,
-						trackLinks:true,
-						accurateTrackBounce:true,
-						webvisor:true
-					});
-				} catch(e) { }
-			});
-
-			var n = d.getElementsByTagName("script")[0],
-			s = d.createElement("script"),
-			f = function () { n.parentNode.insertBefore(s, n); };
-			s.type = "text/javascript";
-			s.async = true;
-			s.src = "https://mc.yandex.ru/metrika/tag.js";
-
-			if (w.opera == "[object Opera]") {
-				d.addEventListener("DOMContentLoaded", f, false);
-			} else { f(); }
-		})(document, window, "yandex_metrika_callbacks2");
-	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/49816147" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-	<!-- /Yandex.Metrika counter -->
-
-
+	
+	
 </head>
 <body>
 
@@ -78,7 +51,7 @@
 
 <section class="portfolio">
 
-	<h2>Портфолио</h2>
+<!-- 	<h2>Портфолио</h2> -->
 
 	<div class="portfolio-wrap">
 
@@ -101,6 +74,17 @@
 	</div>
 </section>
 
+<section class="tech">
+	<div class="owl-carousel owl-theme">
+		<div class="item" style="display: flex;"><i class="fab fa-html5 fa-3x" style="margin: auto; color: gray;"></i></div>
+		<div class="item" style="display: flex;"><i class="fab fa-css3-alt fa-3x" style="margin: auto;"></i></div>
+		<div class="item" style="display: flex;"><i class="fab fa-sass fa-3x" style="margin: auto;"></i></div>
+		<div class="item" style="display: flex;"><i class="fab fa-gulp fa-3x" style="margin: auto;"></i></div>
+		<div class="item" style="display: flex;"><i class="fab fa-js fa-3x" style="margin: auto;"></i></div>
+		<div class="item" style="display: flex;"><i class="fab fa-github fa-3x" style="margin: auto;"></i></div>
+	</div>
+</section>
+
 
 
 
@@ -110,6 +94,7 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
