--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 </div>
 
 <div class="menu-socials">
-	<a href="https://github.com/sonoria" alt="Профиль на GitHub" title="Профиль на GitHub"><i class="fab fa-github"></i></a>
-	<a href="https://hh.ru/" alt="Резюме на HeadHunter" title="Резюме на HeadHunter"><i class="fab fa-wpforms"></i></a>
-	<a href="https://telegram.org" alt="Телеграм" title="Связаться в Телеграме"><i class="fab fa-telegram"></i></a>
-	<a href="https://vk.com" alt="Профиль ВКонтакте" title="Профиль ВКонтакте"><i class="fab fa-vk"></i></a>
+	<a href="https://github.com/sonoria" title="Профиль на GitHub"><i class="fab fa-github"></i></a>
+	<a href="https://hh.ru/" title="Резюме на HeadHunter"><i class="fab fa-wpforms"></i></a>
+	<a href="https://telegram.org" title="Связаться в Телеграме"><i class="fab fa-telegram"></i></a>
+	<a href="https://vk.com" title="Профиль ВКонтакте"><i class="fab fa-vk"></i></a>
 </div>
 
 </div>
@@ -51,23 +51,25 @@
 
 <section class="portfolio">
 
-<!-- 	<h2>Портфолио</h2> -->
+	<!-- 	<h2>Портфолио</h2> -->
 
 	<div class="portfolio-wrap">
 
 		<div class="creatives">
 			<div class="work-block">
-				<a href="https://sonoria.github.io/creatives/">
+				
 					<div class="work">
+						<a href="https://sonoria.github.io/creatives/">
 						<img src="assets/img/creatives.jpg" alt="">
 						<div class="color">
 							<i class="fas fa-search"></i>
 						</div>
+						</a>
 						<a href="https://github.com/sonoria/creatives" target="_blank" class="work-open">
 							<i class="fab fa-github"></i>
 						</a>
 					</div>
-				</a>
+				
 			</div>
 		</div>
 
